COM - Compiladores/compilador/takeo.output
Terminais sem uso na gramática

    T_BOOL
    T_PREC_STR


Gramática

    0 $accept: inicial $end

    1 inicial: global main
    2        | main
    3        | main funcao
    4        | global main funcao

    5 global: identificadores
    6       | global identificadores

    7 main: tipo T_MAIN T_PAR_LEFT parametros T_PAR_RIGHT T_CHA_LEFT escopo retorno T_CHA_RIGHT

    8 tipo: T_INT_TIPO
    9     | T_BOOL_TIPO
   10     | T_REAL_TIPO
   11     | T_STRING_TIPO

   12 parametros: tipo T_IDENT
   13           | tipo T_IDENT T_VIRGULA parametros
   14           | %empty

   15 parametros_chamada: T_IDENT
   16                   | T_IDENT T_VIRGULA parametros_chamada
   17                   | T_INT
   18                   | T_INT T_VIRGULA parametros_chamada
   19                   | %empty

   20 $@1: %empty

   21 $@2: %empty

   22 funcao: tipo T_IDENT T_PAR_LEFT parametros T_PAR_RIGHT T_CHA_LEFT $@1 escopo $@2 T_CHA_RIGHT

   23 chamada_funcao: T_IDENT T_PAR_LEFT parametros_chamada T_PAR_RIGHT

   24 escopo: identificadores
   25       | escopo identificadores
   26       | chamada_funcao
   27       | escopo chamada_funcao
   28       | repeticao_varias_linhas
   29       | escopo repeticao_varias_linhas
   30       | repeticao_uma_linha
   31       | escopo repeticao_uma_linha
   32       | selecao_varias_linhas
   33       | escopo selecao_varias_linhas
   34       | selecao_uma_linha
   35       | escopo selecao_uma_linha
   36       | io
   37       | escopo io
   38       | operacao
   39       | escopo operacao
   40       | retorno

   41 comando_unico: selecao_uma_linha
   42              | repeticao_uma_linha
   43              | io
   44              | operacao

   45 retorno: T_RETURN T_IDENT T_END_LINE
   46        | T_RETURN T_IDENT T_COL_LEFT T_INT T_CHA_RIGHT T_END_LINE
   47        | T_RETURN operacao

   48 identificadores: identificador_inteiro
   49                | identificador_float
   50                | identificador_bool
   51                | identificador_string

   52 identificador_inteiro: novo_inteiro T_END_LINE
   53                      | novo_inteiro T_EQUAL T_INT T_END_LINE
   54                      | novo_inteiro T_EQUAL operacao_inteira T_END_LINE
   55                      | novo_inteiro T_EQUAL chamada_funcao T_END_LINE
   56                      | novo_inteiro T_EQUAL T_MINUS T_INT T_END_LINE
   57                      | novo_inteiro T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
   58                      | novo_inteiro T_COL_LEFT T_INT T_COL_RIGHT T_DOIS_PONTOS valores_vetor_int T_END_LINE
   59                      | T_IDENT T_EQUAL T_INT T_END_LINE
   60                      | T_IDENT T_EQUAL chamada_funcao T_END_LINE
   61                      | T_IDENT T_EQUAL operacao_inteira T_END_LINE
   62                      | T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_EQUAL T_INT T_END_LINE
   63                      | T_IDENT T_COL_LEFT T_IDENT T_COL_RIGHT T_EQUAL T_INT T_END_LINE
   64                      | T_IDENT T_COL_LEFT T_IDENT T_COL_RIGHT T_EQUAL chamada_funcao T_END_LINE

   65 novo_inteiro: T_INT_TIPO T_IDENT

   66 valores_vetor_int: T_INT
   67                  | T_INT valores_vetor_int

   68 identificador_float: T_REAL_TIPO T_IDENT T_END_LINE
   69                    | T_REAL_TIPO T_IDENT T_EQUAL T_REAL T_END_LINE
   70                    | T_REAL_TIPO T_IDENT T_EQUAL T_MINUS T_REAL T_END_LINE
   71                    | T_REAL_TIPO T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
   72                    | T_REAL_TIPO T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_DOIS_PONTOS valores_vetor_float T_END_LINE
   73                    | T_IDENT T_EQUAL T_REAL T_END_LINE

   74 valores_vetor_float: T_REAL
   75                    | T_REAL valores_vetor_float

   76 identificador_string: T_STRING_TIPO T_IDENT T_END_LINE
   77                     | T_STRING_TIPO T_IDENT T_EQUAL T_LITERAL T_END_LINE
   78                     | T_STRING_TIPO T_IDENT T_EQUAL T_STR T_END_LINE
   79                     | T_STRING_TIPO T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
   80                     | T_IDENT T_EQUAL operacao_string T_END_LINE
   81                     | T_STRING_TIPO T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_DOIS_PONTOS valores_vetor_string T_END_LINE
   82                     | T_IDENT T_EQUAL string T_END_LINE

   83 valores_vetor_string: string
   84                     | T_STR valores_vetor_string

   85 string: T_LITERAL

   86 identificador_bool: T_BOOL_TIPO T_IDENT T_END_LINE
   87                   | T_BOOL_TIPO T_IDENT T_EQUAL booleano T_END_LINE
   88                   | T_BOOL_TIPO T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
   89                   | T_BOOL_TIPO T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_DOIS_PONTOS valores_vetor_bool T_END_LINE
   90                   | T_IDENT T_EQUAL T_INT

   91 valores_vetor_bool: booleano valores_vetor_float

   92 booleano: T_INT
   93         | T_FALSE
   94         | T_TRUE

   95 repeticao_uma_linha: while_init T_PAR_LEFT operacao_logica_label T_PAR_RIGHT T_DOIS_PONTOS comando_unico
   96                    | T_FOR T_PAR_LEFT tipo repeticao_label T_VIRGULA T_INT T_VIRGULA T_INT T_PAR_RIGHT T_DOIS_PONTOS comando_unico
   97                    | T_FOR T_PAR_LEFT repeticao_label T_VIRGULA T_INT T_VIRGULA T_INT T_PAR_RIGHT T_DOIS_PONTOS comando_unico

   98 repeticao_varias_linhas: while_init T_PAR_LEFT operacao_logica_label T_PAR_RIGHT T_DOIS_PONTOS T_CHA_LEFT escopo T_CHA_RIGHT
   99                        | T_FOR T_PAR_LEFT tipo repeticao_label T_VIRGULA T_INT T_VIRGULA T_INT T_PAR_RIGHT T_DOIS_PONTOS T_CHA_LEFT escopo T_CHA_RIGHT
  100                        | T_FOR T_PAR_LEFT repeticao_label T_VIRGULA T_INT T_VIRGULA T_INT T_PAR_RIGHT T_DOIS_PONTOS T_CHA_LEFT escopo T_CHA_RIGHT

  101 repeticao_label: T_IDENT T_DOIS_PONTOS T_INT

  102 $@3: %empty

  103 while_init: $@3 T_WHILE

  104 selecao_uma_linha: T_IF T_PAR_LEFT operacao_logica_label T_PAR_RIGHT T_DOIS_PONTOS comando_unico
  105                  | T_IF T_PAR_LEFT operacao_logica_label T_PAR_RIGHT T_DOIS_PONTOS comando_unico else

  106 selecao_varias_linhas: T_IF T_PAR_LEFT operacao_logica_label T_PAR_RIGHT T_DOIS_PONTOS T_CHA_LEFT escopo T_CHA_RIGHT
  107                      | T_IF T_PAR_LEFT operacao_logica_label T_PAR_RIGHT T_DOIS_PONTOS T_CHA_LEFT escopo T_CHA_RIGHT else

  108 else: T_ELSE T_DOIS_PONTOS comando_unico

  109 $@4: %empty

  110 else: T_ELSE T_DOIS_PONTOS $@4 T_CHA_LEFT escopo T_CHA_RIGHT

  111 operacao_logica_label: operacao_logica

  112 io: entrada
  113   | saida

  114 entrada: T_READ T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
  115        | T_READ T_IDENT T_END_LINE

  116 $@5: %empty

  117 $@6: %empty

  118 saida: T_PRINT $@5 argumentos_print $@6 T_END_LINE
  119      | T_PRINT T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
  120      | T_PRINT T_IDENT T_END_LINE

  121 argumentos_print: string
  122                 | string argumentos_print
  123                 | T_VIRGULA string

  124 operacao: operacao_inteira T_END_LINE
  125         | T_INT T_END_LINE
  126         | operacao_logica T_END_LINE
  127         | operacao_real T_END_LINE
  128         | operacao_string T_END_LINE
  129         | T_LITERAL T_END_LINE

  130 operacao_inteira: T_IDENT T_PLUS T_IDENT
  131                 | T_INT T_PLUS T_INT
  132                 | T_INT T_PLUS T_IDENT
  133                 | T_IDENT T_PLUS T_INT
  134                 | operacao_inteira T_MINUS operacao_inteira
  135                 | operacao_inteira T_MINUS T_IDENT
  136                 | T_IDENT T_MINUS operacao_inteira
  137                 | T_IDENT T_MINUS T_IDENT
  138                 | operacao_inteira T_MULTIPLY operacao_inteira
  139                 | operacao_inteira T_MULTIPLY T_IDENT
  140                 | T_IDENT T_MULTIPLY operacao_inteira
  141                 | T_IDENT T_MULTIPLY T_IDENT
  142                 | T_PAR_LEFT operacao_inteira T_PAR_RIGHT

  143 operacao_real: T_REAL
  144              | operacao_real T_PLUS operacao_real
  145              | operacao_real T_MINUS operacao_real
  146              | operacao_real T_MULTIPLY operacao_real
  147              | operacao_real T_DIVIDE operacao_real
  148              | operacao_inteira T_PLUS operacao_real
  149              | operacao_inteira T_LESS operacao_real
  150              | operacao_inteira T_MULTIPLY operacao_real
  151              | operacao_inteira T_DIVIDE operacao_real
  152              | operacao_real T_PLUS operacao_inteira
  153              | operacao_real T_MINUS operacao_inteira
  154              | operacao_real T_MULTIPLY operacao_inteira
  155              | operacao_real T_DIVIDE operacao_inteira
  156              | T_PAR_LEFT operacao_real T_PAR_RIGHT
  157              | operacao_inteira T_DIVIDE operacao_inteira

  158 operacao_logica: T_TRUE
  159                | T_FALSE
  160                | operacao_logica T_OR operacao_logica
  161                | T_IDENT T_OR operacao_logica
  162                | operacao_logica T_AND operacao_logica
  163                | operacao_logica T_MORE operacao_logica
  164                | T_IDENT T_MORE operacao_logica
  165                | T_IDENT T_MORE T_INT
  166                | operacao_logica T_LESS operacao_logica
  167                | T_IDENT T_LESS operacao_logica
  168                | T_IDENT T_LESS T_INT
  169                | operacao_logica T_EQQ operacao_logica
  170                | T_IDENT T_EQQ operacao_logica
  171                | T_IDENT T_EQQ T_INT

  172 operacao_string: T_IDENT T_APPEND T_LITERAL
  173                | T_LITERAL T_APPEND T_IDENT
  174                | T_LITERAL T_APPEND T_LITERAL


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    T_INT <ival> (258) 17 18 46 53 56 57 58 59 62 63 66 67 71 72 79 81 88 89 90 92 96 97 99 100 101 114 119 125 131 132 133 165 168 171
    T_REAL <fval> (259) 69 70 73 74 75 143
    T_BOOL <ival> (260)
    T_IDENT <str> (261) 12 13 15 16 22 23 45 46 59 60 61 62 63 64 65 68 69 70 71 72 73 76 77 78 79 80 81 82 86 87 88 89 90 101 114 115 119 120 130 132 133 135 136 137 139 140 141 161 164 165 167 168 170 171 172 173
    T_LITERAL <str> (262) 77 85 129 172 173 174
    T_STR <str> (263) 78 84
    T_TRUE <ival> (264) 94 158
    T_FALSE <ival> (265) 93 159
    T_END_LINE (266) 45 46 52 53 54 55 56 57 58 59 60 61 62 63 64 68 69 70 71 72 73 76 77 78 79 80 81 82 86 87 88 89 114 115 118 119 120 124 125 126 127 128 129
    T_DOIS_PONTOS (267) 58 72 81 89 95 96 97 98 99 100 101 104 105 106 107 108 110
    T_VIRGULA (268) 13 16 18 96 97 99 100 123
    T_STRING_TIPO (269) 11 76 77 78 79 81
    T_BOOL_TIPO (270) 9 86 87 88 89
    T_INT_TIPO (271) 8 65
    T_REAL_TIPO (272) 10 68 69 70 71 72
    T_MAIN (273) 7
    T_RETURN (274) 45 46 47
    T_IF (275) 104 105 106 107
    T_WHILE (276) 103
    T_FOR (277) 96 97 99 100
    T_PRINT (278) 118 119 120
    T_READ (279) 114 115
    T_PLUS (280) 130 131 132 133 144 148 152
    T_MINUS (281) 56 70 134 135 136 137 145 153
    T_MULTIPLY (282) 138 139 140 141 146 150 154
    T_DIVIDE (283) 147 151 155 157
    T_APPEND (284) 172 173 174
    T_PAR_LEFT (285) 7 22 23 95 96 97 98 99 100 104 105 106 107 142 156
    T_CHA_LEFT (286) 7 22 98 99 100 106 107 110
    T_PAR_RIGHT (287) 7 22 23 95 96 97 98 99 100 104 105 106 107 142 156
    T_COL_RIGHT (288) 57 58 62 63 64 71 72 79 81 88 89 114 119
    T_CHA_RIGHT (289) 7 22 46 98 99 100 106 107 110
    T_EQQ (290) 169 170 171
    T_LESS (291) 149 166 167 168
    T_MORE (292) 163 164 165
    T_EQUAL (293) 53 54 55 56 59 60 61 62 63 64 69 70 73 77 78 80 82 87 90
    T_OR (294) 160 161
    T_AND (295) 162
    T_COL_LEFT (296) 46 57 58 62 63 64 71 72 79 81 88 89 114 119
    T_THEN1 (297)
    T_THEN2 (298)
    T_ELSE (299) 108 110
    T_PREC_STR (300)
    T_RET (301)


Não terminais com as regras onde eles aparecem

    $accept (47)
        à esquerda: 0
    inicial (48)
        à esquerda: 1 2 3 4
        à direita: 0
    global (49)
        à esquerda: 5 6
        à direita: 1 4 6
    main (50)
        à esquerda: 7
        à direita: 1 2 3 4
    tipo <ival> (51)
        à esquerda: 8 9 10 11
        à direita: 7 12 13 22 96 99
    parametros (52)
        à esquerda: 12 13 14
        à direita: 7 13 22
    parametros_chamada (53)
        à esquerda: 15 16 17 18 19
        à direita: 16 18 23
    funcao (54)
        à esquerda: 22
        à direita: 3 4
    $@1 (55)
        à esquerda: 20
        à direita: 22
    $@2 (56)
        à esquerda: 21
        à direita: 22
    chamada_funcao <str> (57)
        à esquerda: 23
        à direita: 26 27 55 60 64
    escopo (58)
        à esquerda: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
        à direita: 7 22 25 27 29 31 33 35 37 39 98 99 100 106 107 110
    comando_unico (59)
        à esquerda: 41 42 43 44
        à direita: 95 96 97 104 105 108
    retorno (60)
        à esquerda: 45 46 47
        à direita: 7 40
    identificadores (61)
        à esquerda: 48 49 50 51
        à direita: 5 6 24 25
    identificador_inteiro (62)
        à esquerda: 52 53 54 55 56 57 58 59 60 61 62 63 64
        à direita: 48
    novo_inteiro <str> (63)
        à esquerda: 65
        à direita: 52 53 54 55 56 57 58
    valores_vetor_int (64)
        à esquerda: 66 67
        à direita: 58 67
    identificador_float (65)
        à esquerda: 68 69 70 71 72 73
        à direita: 49
    valores_vetor_float (66)
        à esquerda: 74 75
        à direita: 72 75 91
    identificador_string (67)
        à esquerda: 76 77 78 79 80 81 82
        à direita: 51
    valores_vetor_string (68)
        à esquerda: 83 84
        à direita: 81 84
    string <str> (69)
        à esquerda: 85
        à direita: 82 83 121 122 123
    identificador_bool (70)
        à esquerda: 86 87 88 89 90
        à direita: 50
    valores_vetor_bool (71)
        à esquerda: 91
        à direita: 89
    booleano (72)
        à esquerda: 92 93 94
        à direita: 87 91
    repeticao_uma_linha (73)
        à esquerda: 95 96 97
        à direita: 30 31 42
    repeticao_varias_linhas (74)
        à esquerda: 98 99 100
        à direita: 28 29
    repeticao_label <ival> (75)
        à esquerda: 101
        à direita: 96 97 99 100
    while_init (76)
        à esquerda: 103
        à direita: 95 98
    $@3 (77)
        à esquerda: 102
        à direita: 103
    selecao_uma_linha (78)
        à esquerda: 104 105
        à direita: 34 35 41
    selecao_varias_linhas (79)
        à esquerda: 106 107
        à direita: 32 33
    else (80)
        à esquerda: 108 110
        à direita: 105 107
    $@4 (81)
        à esquerda: 109
        à direita: 110
    operacao_logica_label (82)
        à esquerda: 111
        à direita: 95 98 104 105 106 107
    io (83)
        à esquerda: 112 113
        à direita: 36 37 43
    entrada (84)
        à esquerda: 114 115
        à direita: 112
    saida (85)
        à esquerda: 118 119 120
        à direita: 113
    $@5 (86)
        à esquerda: 116
        à direita: 118
    $@6 (87)
        à esquerda: 117
        à direita: 118
    argumentos_print (88)
        à esquerda: 121 122 123
        à direita: 118 122
    operacao (89)
        à esquerda: 124 125 126 127 128 129
        à direita: 38 39 44 47
    operacao_inteira (90)
        à esquerda: 130 131 132 133 134 135 136 137 138 139 140 141 142
        à direita: 54 61 124 134 135 136 138 139 140 142 148 149 150 151 152 153 154 155 157
    operacao_real (91)
        à esquerda: 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157
        à direita: 127 144 145 146 147 148 149 150 151 152 153 154 155 156
    operacao_logica (92)
        à esquerda: 158 159 160 161 162 163 164 165 166 167 168 169 170 171
        à direita: 111 126 160 161 162 163 164 166 167 169 170
    operacao_string (93)
        à esquerda: 172 173 174
        à direita: 80 128


Estado 0

    0 $accept: . inicial $end

    T_IDENT        deslocar, e ir ao estado 1
    T_STRING_TIPO  deslocar, e ir ao estado 2
    T_BOOL_TIPO    deslocar, e ir ao estado 3
    T_INT_TIPO     deslocar, e ir ao estado 4
    T_REAL_TIPO    deslocar, e ir ao estado 5

    inicial                ir ao estado 6
    global                 ir ao estado 7
    main                   ir ao estado 8
    tipo                   ir ao estado 9
    identificadores        ir ao estado 10
    identificador_inteiro  ir ao estado 11
    novo_inteiro           ir ao estado 12
    identificador_float    ir ao estado 13
    identificador_string   ir ao estado 14
    identificador_bool     ir ao estado 15


Estado 1

   59 identificador_inteiro: T_IDENT . T_EQUAL T_INT T_END_LINE
   60                      | T_IDENT . T_EQUAL chamada_funcao T_END_LINE
   61                      | T_IDENT . T_EQUAL operacao_inteira T_END_LINE
   62                      | T_IDENT . T_COL_LEFT T_INT T_COL_RIGHT T_EQUAL T_INT T_END_LINE
   63                      | T_IDENT . T_COL_LEFT T_IDENT T_COL_RIGHT T_EQUAL T_INT T_END_LINE
   64                      | T_IDENT . T_COL_LEFT T_IDENT T_COL_RIGHT T_EQUAL chamada_funcao T_END_LINE
   73 identificador_float: T_IDENT . T_EQUAL T_REAL T_END_LINE
   80 identificador_string: T_IDENT . T_EQUAL operacao_string T_END_LINE
   82                     | T_IDENT . T_EQUAL string T_END_LINE
   90 identificador_bool: T_IDENT . T_EQUAL T_INT

    T_EQUAL     deslocar, e ir ao estado 16
    T_COL_LEFT  deslocar, e ir ao estado 17


Estado 2

   11 tipo: T_STRING_TIPO .
   76 identificador_string: T_STRING_TIPO . T_IDENT T_END_LINE
   77                     | T_STRING_TIPO . T_IDENT T_EQUAL T_LITERAL T_END_LINE
   78                     | T_STRING_TIPO . T_IDENT T_EQUAL T_STR T_END_LINE
   79                     | T_STRING_TIPO . T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
   81                     | T_STRING_TIPO . T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_DOIS_PONTOS valores_vetor_string T_END_LINE

    T_IDENT  deslocar, e ir ao estado 18

    $padrão  reduzir usando a regra 11 (tipo)


Estado 3

    9 tipo: T_BOOL_TIPO .
   86 identificador_bool: T_BOOL_TIPO . T_IDENT T_END_LINE
   87                   | T_BOOL_TIPO . T_IDENT T_EQUAL booleano T_END_LINE
   88                   | T_BOOL_TIPO . T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
   89                   | T_BOOL_TIPO . T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_DOIS_PONTOS valores_vetor_bool T_END_LINE

    T_IDENT  deslocar, e ir ao estado 19

    $padrão  reduzir usando a regra 9 (tipo)


Estado 4

    8 tipo: T_INT_TIPO .
   65 novo_inteiro: T_INT_TIPO . T_IDENT

    T_IDENT  deslocar, e ir ao estado 20

    $padrão  reduzir usando a regra 8 (tipo)


Estado 5

   10 tipo: T_REAL_TIPO .
   68 identificador_float: T_REAL_TIPO . T_IDENT T_END_LINE
   69                    | T_REAL_TIPO . T_IDENT T_EQUAL T_REAL T_END_LINE
   70                    | T_REAL_TIPO . T_IDENT T_EQUAL T_MINUS T_REAL T_END_LINE
   71                    | T_REAL_TIPO . T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
   72                    | T_REAL_TIPO . T_IDENT T_COL_LEFT T_INT T_COL_RIGHT T_DOIS_PONTOS valores_vetor_float T_END_LINE

    T_IDENT  deslocar, e ir ao estado 21

    $padrão  reduzir usando a regra 10 (tipo)


Estado 6

    0 $accept: inicial . $end

    $end  deslocar, e ir ao estado 22


Estado 7

    1 inicial: global . main
    4        | global . main funcao
    6 global: global . identificadores

    T_IDENT        deslocar, e ir ao estado 1
    T_STRING_TIPO  deslocar, e ir ao estado 2
    T_BOOL_TIPO    deslocar, e ir ao estado 3
    T_INT_TIPO     deslocar, e ir ao estado 4
    T_REAL_TIPO    deslocar, e ir ao estado 5

    main                   ir ao estado 23
    tipo                   ir ao estado 9
    identificadores        ir ao estado 24
    identificador_inteiro  ir ao estado 11
    novo_inteiro           ir ao estado 12
    identificador_float    ir ao estado 13
    identificador_string   ir ao estado 14
    identificador_bool     ir ao estado 15


Estado 8

    2 inicial: main .
    3        | main . funcao

    T_STRING_TIPO  deslocar, e ir ao estado 25
    T_BOOL_TIPO    deslocar, e ir ao estado 26
    T_INT_TIPO     deslocar, e ir ao estado 27
    T_REAL_TIPO    deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 2 (inicial)

    tipo    ir ao estado 29
    funcao  ir ao estado 30


Estado 9

    7 main: tipo . T_MAIN T_PAR_LEFT parametros T_PAR_RIGHT T_CHA_LEFT escopo retorno T_CHA_RIGHT

    T_MAIN  deslocar, e ir ao estado 31


Estado 10

    5 global: identificadores .

    $padrão  reduzir usando a regra 5 (global)


Estado 11

   48 identificadores: identificador_inteiro .

    $padrão  reduzir usando a regra 48 (identificadores)


Estado 12

   52 identificador_inteiro: novo_inteiro . T_END_LINE
   53                      | novo_inteiro . T_EQUAL T_INT T_END_LINE
   54                      | novo_inteiro . T_EQUAL operacao_inteira T_END_LINE
   55                      | novo_inteiro . T_EQUAL chamada_funcao T_END_LINE
   56                      | novo_inteiro . T_EQUAL T_MINUS T_INT T_END_LINE
   57                      | novo_inteiro . T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
   58                      | novo_inteiro . T_COL_LEFT T_INT T_COL_RIGHT T_DOIS_PONTOS valores_vetor_int T_END_LINE

    T_END_LINE  deslocar, e ir ao estado 32
    T_EQUAL     deslocar, e ir ao estado 33
    T_COL_LEFT  deslocar, e ir ao estado 34


Estado 13

   49 identificadores: identificador_float .

    $padrão  reduzir usando a regra 49 (identificadores)


Estado 14

   51 identificadores: identificador_string .

    $padrão  reduzir usando a regra 51 (identificadores)


Estado 15

   50 identificadores: identificador_bool .

    $padrão  reduzir usando a regra 50 (identificadores)


Estado 16

   59 identificador_inteiro: T_IDENT T_EQUAL . T_INT T_END_LINE
   60                      | T_IDENT T_EQUAL . chamada_funcao T_END_LINE
   61                      | T_IDENT T_EQUAL . operacao_inteira T_END_LINE
   73 identificador_float: T_IDENT T_EQUAL . T_REAL T_END_LINE
   80 identificador_string: T_IDENT T_EQUAL . operacao_string T_END_LINE
   82                     | T_IDENT T_EQUAL . string T_END_LINE
   90 identificador_bool: T_IDENT T_EQUAL . T_INT

    T_INT       deslocar, e ir ao estado 35
    T_REAL      deslocar, e ir ao estado 36
    T_IDENT     deslocar, e ir ao estado 37
    T_LITERAL   deslocar, e ir ao estado 38
    T_PAR_LEFT  deslocar, e ir ao estado 39

    chamada_funcao    ir ao estado 40
    string            ir ao estado 41
    operacao_inteira  ir ao estado 42
    operacao_string   ir ao estado 43


Estado 17

   62 identificador_inteiro: T_IDENT T_COL_LEFT . T_INT T_COL_RIGHT T_EQUAL T_INT T_END_LINE
   63                      | T_IDENT T_COL_LEFT . T_IDENT T_COL_RIGHT T_EQUAL T_INT T_END_LINE
   64                      | T_IDENT T_COL_LEFT . T_IDENT T_COL_RIGHT T_EQUAL chamada_funcao T_END_LINE

    T_INT    deslocar, e ir ao estado 44
    T_IDENT  deslocar, e ir ao estado 45


Estado 18

   76 identificador_string: T_STRING_TIPO T_IDENT . T_END_LINE
   77                     | T_STRING_TIPO T_IDENT . T_EQUAL T_LITERAL T_END_LINE
   78                     | T_STRING_TIPO T_IDENT . T_EQUAL T_STR T_END_LINE
   79                     | T_STRING_TIPO T_IDENT . T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
   81                     | T_STRING_TIPO T_IDENT . T_COL_LEFT T_INT T_COL_RIGHT T_DOIS_PONTOS valores_vetor_string T_END_LINE

    T_END_LINE  deslocar, e ir ao estado 46
    T_EQUAL     deslocar, e ir ao estado 47
    T_COL_LEFT  deslocar, e ir ao estado 48


Estado 19

   86 identificador_bool: T_BOOL_TIPO T_IDENT . T_END_LINE
   87                   | T_BOOL_TIPO T_IDENT . T_EQUAL booleano T_END_LINE
   88                   | T_BOOL_TIPO T_IDENT . T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
   89                   | T_BOOL_TIPO T_IDENT . T_COL_LEFT T_INT T_COL_RIGHT T_DOIS_PONTOS valores_vetor_bool T_END_LINE

    T_END_LINE  deslocar, e ir ao estado 49
    T_EQUAL     deslocar, e ir ao estado 50
    T_COL_LEFT  deslocar, e ir ao estado 51


Estado 20

   65 novo_inteiro: T_INT_TIPO T_IDENT .

    $padrão  reduzir usando a regra 65 (novo_inteiro)


Estado 21

   68 identificador_float: T_REAL_TIPO T_IDENT . T_END_LINE
   69                    | T_REAL_TIPO T_IDENT . T_EQUAL T_REAL T_END_LINE
   70                    | T_REAL_TIPO T_IDENT . T_EQUAL T_MINUS T_REAL T_END_LINE
   71                    | T_REAL_TIPO T_IDENT . T_COL_LEFT T_INT T_COL_RIGHT T_END_LINE
   72                    | T_REAL_TIPO T_IDENT . T_COL_LEFT T_INT T_COL_RIGHT T_DOIS_PONTOS valores_vetor_float T_END_LINE

    T_END_LINE  deslocar, e ir ao estado 52
    T_EQUAL     deslocar, e ir ao estado 53
    T_COL_LEFT  deslocar, e ir ao estado 54


Estado 22

    0 $accept: inicial $end .

    $padrão  aceitar


Estado 23

    1 inicial: global main .
    4        | global main . funcao

    T_STRING_TIPO  deslocar, e ir ao estado 25
    T_BOOL_TIPO    deslocar, e ir ao estado 26
    T_INT_TIPO     deslocar, e ir ao estado 27
    T_REAL_TIPO    deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 1 (inicial)

    tipo    ir ao estado 29
    funcao  ir ao estado 55


Estado 24

    6 global: global identificadores .

    $padrão  reduzir usando a regra 6 (global)


Estado 25

   11 tipo: T_STRING_TIPO .

    $padrão  reduzir usando a regra 11 (tipo)


Estado 26

    9 tipo: T_BOOL_TIPO .

    $padrão  reduzir usando a regra 9 (tipo)


Estado 27

    8 tipo: T_INT_TIPO .

    $padrão  reduzir usando a regra 8 (tipo)


Estado 28

   10 tipo: T_REAL_TIPO .

    $padrão  reduzir usando a regra 10 (tipo)


Estado 29

   22 funcao: tipo . T_IDENT T_PAR_LEFT parametros T_PAR_RIGHT T_CHA_LEFT $@1 escopo $@2 T_CHA_RIGHT

    T_IDENT  deslocar, e ir ao estado 56


Estado 30

    3 inicial: main funcao .

    $padrão  reduzir usando a regra 3 (inicial)


Estado 31

    7 main: tipo T_MAIN . T_PAR_LEFT parametros T_PAR_RIGHT T_CHA_LEFT escopo retorno T_CHA_RIGHT

    T_PAR_LEFT  deslocar, e ir ao estado 57


Estado 32

   52 identificador_inteiro: novo_inteiro T_END_LINE .

    $padrão  reduzir usando a regra 52 (identificador_inteiro)


Estado 33

   53 identificador_inteiro: novo_inteiro T_EQUAL . T_INT T_END_LINE
   54                      | novo_inteiro T_EQUAL . operacao_inteira T_END_LINE
   55                      | novo_inteiro T_EQUAL . chamada_funcao T_END_LINE
   56                      | novo_inteiro T_EQUAL . T_MINUS T_INT T_END_LINE

    T_INT       deslocar, e ir ao estado 58
    T_IDENT     deslocar, e ir ao estado 59
    T_MINUS     deslocar, e ir ao estado 60
    T_PAR_LEFT  deslocar, e ir ao estado 39

    chamada_funcao    ir ao estado 61
    operacao_inteira  ir ao estado 62


Estado 34

   57 identificador_inteiro: novo_inteiro T_COL_LEFT . T_INT T_COL_RIGHT T_END_LINE
   58                      | novo_inteiro T_COL_LEFT . T_INT T_COL_RIGHT T_DOIS_PONTOS valores_vetor_int T_END_LINE

    T_INT  deslocar, e ir ao estado 63


Estado 35

   59 identificador_inteiro: T_IDENT T_EQUAL T_INT . T_END_LINE
   90 identificador_bool: T_IDENT T_EQUAL T_INT .
  131 operacao_inteira: T_INT . T_PLUS T_INT
  132                 | T_INT . T_PLUS T_IDENT

    T_END_LINE  deslocar, e ir ao estado 64
    T_PLUS      deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 90 (identificador_bool)


Estado 36

   73 identificador_float: T_IDENT T_EQUAL T_REAL . T_END_LINE

    T_END_LINE  deslocar, e ir ao estado 66


Estado 37

   23 chamada_funcao: T_IDENT . T_PAR_LEFT parametros_chamada T_PAR_RIGHT
  130 operacao_inteira: T_IDENT . T_PLUS T_IDENT
  133                 | T_IDENT . T_PLUS T_INT
  136                 | T_IDENT . T_MINUS operacao_inteira
  137                 | T_IDENT . T_MINUS T_IDENT
  140                 | T_IDENT . T_MULTIPLY operacao_inteira
  141                 | T_IDENT . T_MULTIPLY T_IDENT
  172 operacao_string: T_IDENT . T_APPEND T_LITERAL

    T_PLUS      deslocar, e ir ao estado 67
    T_MINUS     deslocar, e ir ao estado 68
    T_MULTIPLY  deslocar, e ir ao estado 69
    T_APPEND    deslocar, e ir ao estado 70
    T_PAR_LEFT  deslocar, e ir ao estado 71


Estado 38

   85 string: T_LITERAL .
  173 operacao_string: T_LITERAL . T_APPEND T_IDENT
  174                | T_LITERAL . T_APPEND T_LITERAL
